@@ -3,6 +3,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 4.1.4
   e - When in cray mode, write physmem and availmem in addition to totmem so that 
       Moab correctly reads memory info.
+  e - Specifying size, nodes, and mppwidth and all mutually exclusize, so reject
+      job submissions that attempt to specify more than one of these. TRQ-1185.
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
